<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.duniter.app.view.dialog.preference.PinPreference
        android:key="pin"
        android:title="@string/pin_code"
        android:defaultValue="0000"/>

    <org.duniter.app.view.dialog.preference.ListPreference
        android:title="@string/first_currency_unit"
        android:key="unit"
        android:defaultValue="1"
        android:entries="@array/list_unit"
        android:entryValues="@array/list_unit_value" />

    <org.duniter.app.view.dialog.preference.ListPreference
        android:title="@string/second_currency_unit"
        android:key="default_unit"
        android:defaultValue="0"
        android:entries="@array/list_unit"
        android:entryValues="@array/list_unit_value" />

    <org.duniter.app.view.dialog.preference.NumberPickerPreference
        android:key="decimal"
        android:title="@string/number_digit"
        android:defaultValue="4" />

    <SwitchPreference
        android:title="@string/use_oblivion"
        android:summary="@string/ask_use_oblivion"
        android:key="use_oblivion"
        android:defaultValue="false"/>

    <SwitchPreference
        android:title="@string/display_dividend"
        android:summary="@string/display_dividend_received"
        android:key="display_du"
        android:defaultValue="true"/>

    <org.duniter.app.view.dialog.preference.ListPreference
        android:title="@string/time_sync"
        android:key="delay_sync"
        android:defaultValue="600000"
        android:entries="@array/list_time_sync"
        android:entryValues="@array/list_time_sync_value" />

</PreferenceScreen>