<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/wrap_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/developed_by"
            style="@style/headline"/>

        <TextView
            android:text="blavenie - https://github.com/blavenie"
            style="@style/CreditLabel"/>
        <TextView
            android:text="mmpio - https://github.com/mmpio"
            style="@style/CreditLabel"/>
        <TextView
            android:text="naivalf27 - https://github.com/naivalf27"
            style="@style/CreditLabel"/>

        <TextView
            android:text="@string/source_code"
            style="@style/headline"/>

        <TextView
            android:text="https://github.com/duniter/ucoin-android-app.git"
            style="@style/CreditLabel"/>

        <TextView
            android:text="@string/licence"
            style="@style/headline"/>

        <TextView
            android:text="GNU GPL v3"
            style="@style/CreditLabel"/>

        <TextView
            android:text="@string/application_version"
            style="@style/headline"/>

        <TextView
            android:id="@+id/version"
            android:text=""
            style="@style/CreditLabel"/>

        <TextView
            android:text="@string/protocol_version"
            style="@style/headline"/>

        <TextView
            android:text="v0.2"
            style="@style/CreditLabel"/>

    </LinearLayout>
</ScrollView>