<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingStart="@dimen/padding"
    android:paddingEnd="@dimen/padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_confirm_certification_1"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:paddingTop="@dimen/demi_padding"
        android:paddingBottom="@dimen/demi_padding"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_confirm_certification_2"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:paddingTop="@dimen/demi_padding"
        android:paddingBottom="@dimen/demi_padding"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_confirm_certification_3"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:paddingTop="@dimen/demi_padding"
        android:paddingBottom="@dimen/demi_padding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_confirm_certification_4"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:paddingTop="@dimen/demi_padding"
        android:paddingBottom="@dimen/demi_padding"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_confirm_certification_5"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"/>
</LinearLayout>



