<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <!-- currency -->
        <TextView
            android:id="@+id/currency_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency" />

        <Spinner
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" />

        <!-- alias -->
        <EditText
            android:id="@+id/alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alias_hint"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet_account_subtitle"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/uid_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/uid"
            android:text="@string/uid_instructions"
            android:textSize="@dimen/abc_text_size_caption_material"
            android:visibility="gone" />


        <!-- user ID -->
        <EditText
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uid_hint"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/salt_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salt_instructions"
            android:textSize="@dimen/abc_text_size_caption_material"
            android:visibility="gone" />

        <!-- salt -->
        <EditText
            android:id="@+id/salt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/salt_hint"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />


        <TextView
            android:id="@+id/password_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_instructions"
            android:textSize="@dimen/abc_text_size_caption_material"
            android:visibility="gone" />

        <!-- password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

        <!-- confirm password -->
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </LinearLayout>

</ScrollView>



