<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/DialogFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uid"
        style="@style/FormLabel"/-->

    <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uid_hint"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_body_2_material" />


    <!--TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salt"/-->

    <EditText
        android:id="@+id/salt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salt_hint"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_body_2_material" />

    <!--TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/password"
        android:gravity="right"
        android:layout_marginRight="8dp" /-->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_body_2_material" />

    <!--TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/confirm"
        android:gravity="right" /-->

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_body_2_material" />

    <TextView
        android:id="@+id/uid_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/uid"
        android:text="@string/uid_instructions"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:visibility="gone" />

    <TextView
        android:id="@+id/salt_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salt_instructions"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:visibility="gone" />

    <TextView
        android:id="@+id/password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_instructions"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login"
        style="@style/ButtonText.Small"/>

</LinearLayout>



