<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">


        <!-- currency -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textColor="#372c24" />

        <Spinner
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:imeOptions="actionNext"
            android:textSize="@dimen/abc_text_size_body_2_material" />

        <!-- user ID -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <EditText
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/user_id"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material"/>

        <!-- salt -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salt" />

        <EditText
            android:id="@+id/salt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/salt"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />

        <!-- password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />

        <!-- confirm password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_body_2_material" />

        <TextView
            android:id="@+id/uid_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/uid"
            android:text="@string/uid_instructions"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:visibility="gone" />

        <TextView
            android:id="@+id/salt_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salt_instructions"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:visibility="gone" />


        <TextView
            android:id="@+id/password_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_instructions"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:visibility="gone" />


        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ok"
            android:textStyle="bold" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>



