<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headline"
        style="@style/headline"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_node_info" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/dialog_text_add_node"
        android:layout_marginBottom="16dp"
        android:textSize="@dimen/abc_text_size_body_1_material"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/node_address"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/node_port"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:singleLine="true" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/positive_button"
            android:background="@color/transparent"
            android:text="@string/CANCEL"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/positive_button"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@color/transparent"
            android:text="@string/ok"
            android:textColor="@color/primary" />

    </RelativeLayout>
</LinearLayout>



